Fix java build error